--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-/* Custom Properties, update these for your own design */
 
 :root {
     --ff-primary: 'Source Sans Pro', sans-serif;
@@ -37,10 +36,10 @@
 
 /* General styles */
 
-/* endable this to add smooth scrolling */
-/* html {
+
+html {
     scroll-behavior: smooth;
-} */
+}
 
 
 body {
@@ -297,7 +296,6 @@ header {
     background-color: var(--clr-dark);
     background-image: url(../img/services-bg.jpg);
     background-size: cover;
-    /* background-blend-mode: multiply; */
     color: var(--clr-light);
     text-align: center;
 }
